# service/api/setMyPhoto.go
@@ -46,7 +46,7 @@ func (rt *_router) setMyPhoto(w http.ResponseWriter, r *http.Request, ps httprou
 	}
 
 	// Get the file from the form data
-	file, _, err := r.FormFile("file") // "file" is the form field name
+	file, _, err := r.FormFile("photo") // "file" is the form field name
 	if err != nil {
 		http.Error(w, "Unable to read file", http.StatusBadRequest)
 		return
